--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "ahooks": "^3.7.7",
+    "js-beautify": "^1.14.7",
     "lodash": "^4.17.21",
+    "monaco-editor": "^0.38.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
